Update experience section with enhanced timeline design

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 
                 <div class="timeline-item">
-                    <div class="timeline-date">July – Oct 2024</div>
+                    <div class="timeline-date">July 2024 – Oct 2024</div>
                     <h3>Part-Time Tutor</h3>
                     <p class="company">ECA Education</p>
                     <ul class="achievements">
