Change semester information to 2025-26 Spring

--- a/course-history.html
+++ b/course-history.html
@@ -53,9 +53,9 @@
             <h2>Course History</h2>
             <p class="description">Number of credits for each course is indicated in parentheses.</p>
 
-<!--
+
     <div class="semester">
-        <h2>Spring 2025-2026</h2>
+        <h2>Spring 2025-2026 (Current Semester)</h2>
         <div class="course">
             <span class="course-name">COMP2012 - Object Oriented Programming (4)</span>
         </div>
@@ -77,9 +77,11 @@
         <div class="course">
             <span class="course-name">MGMT2110 - Organizational Behavior (3)</span>
         </div>
+        <!---
         <div class="course">
             <span class="course-name">CPEG1971 - Industrial Training (0)</span>
         </div>
+    -->
         <div class="course">
             <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
         </div>
@@ -91,10 +93,10 @@
         </div>
     </div>
 
-    -->
+    
 
             <div class="semester">
-                <h3>Winter 2025-2026 (Current Semester)</h3>
+                <h3>Winter 2025-2026</h3>
                 <div class="course">
                     <span class="course-name">TEMG4970F - T&M IBPC in Saudi Arabia (3)</span>
                 </div>
