--- a/course-history.html
+++ b/course-history.html
@@ -229,15 +229,16 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>
-                <a href="mailto:isaactszhinlau@gmail.com" target="_blank"><i class="fas fa-envelope"></i> isaactszhinlau@gmail.com</a> | 
-                <a href="https://github.com/isaaclau128" target="_blank"><i class="fab fa-github"></i> https://github.com/isaaclau128</a> | 
-                <a href="https://www.linkedin.com/in/lautszhinisaac" target="_blank"><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/lautszhinisaac</a>
-            </p>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
+    <script>
+        // Load footer from separate file
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('footer-container').innerHTML = html;
+            })
+            .catch(() => console.error('Failed to load footer'));
+    </script>
     <script>
         (function() {
             const toggleBtn = document.getElementById('theme-toggle');
