change format of course history

--- a/course-history.html
+++ b/course-history.html
@@ -55,44 +55,41 @@
             <p class="description">Number of credits for each course is indicated in parentheses.</p>
 
 
-    <div class="semester">
-        <h2>Spring 2025-2026 (Current Semester)</h2>
-        <div class="course">
-            <span class="course-name">COMP2012 - Object Oriented Programming (4)</span>
         </div>
-        <div class="course">
-            <span class="course-name">ELEC2400 - Electronic Circuits (4)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">FINA2303 - Financial Management (3)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">HUMA1102 - Introduction to Classical Music (3)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">ISOM2600 - Introduction to Business Analytics (1)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">LANG2063 - Writing for Workplace Success (3)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">MGMT2110 - Organizational Behavior (3)</span>
-        </div>
-        <!---
-        <div class="course">
-            <span class="course-name">CPEG1971 - Industrial Training (0)</span>
-        </div>
-    -->
-        <div class="course">
-            <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">ENGG2010 - Engineering Seminar Series (0)</span>
-        </div>
-        <div class="course">
-            <span class="course-name">TEMG1010 - T&M Professional Activities (0)</span>
-        </div>
-    </div>
+
+            <div class="semester">
+                <h3>Spring 2025-2026</h3>
+                    <div class="course">
+                <span class="course-name">COMP2012 - Object Oriented Programming (4)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">ELEC2400 - Electronic Circuits (4)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">FINA2303 - Financial Management (3)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">HUMA1102 - Introduction to Classical Music (3)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">ISOM2600 - Introduction to Business Analytics (1)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">LANG2063 - Writing for Workplace Success (3)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">MGMT2110 - Organizational Behavior (3)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">CPEG2930 - Academic and Professional Development II (0)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">ENGG2010 - Engineering Seminar Series (0)</span>
+                </div>
+                <div class="course">
+                    <span class="course-name">TEMG1010 - T&M Professional Activities (0)</span>
+                </div>
+            </div>
 
     
 
