added IBPC experience

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <h3>Student at the Hong Kong University of Science and Technology</h3>
                     <p class="company">BEng in Computer Engineering with an Extended Major in Digital Media and Creative Arts and BBA in Business Administration (Undeclared Major)</p>
                     <ul class="achievements"> 
+                        <li>2026 International Business Plan Competition - 1st Runner Up</li>
+                        <li>Foundations of User Experience Design - Certified by Google</li>
                         <li>Deputy Head Student Ambassador</li>
                         
                     </ul>
