Add hero quote and adjust heading

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <div class="hero-wrapper">
                     <div class="hero-text">
                         <h1>Hi, I'm Isaac.</h1>
+                        <p class="hero-quote">“When you know what you want, and you want it bad enough, you’ll find a way to get it.” - Jim Rohn</p>
                         <!-- 
                         <p class="subtitle">Technology Enthusiast</p>
                         
